[gd_scene load_steps=4 format=3 uid="uid://crb3an4l1lvyx"]

[ext_resource type="Script" path="res://Scripts/Menu Button Scripts/NewGameButton.gd" id="1_wlqcl"]
[ext_resource type="Texture2D" uid="uid://dspt8d4xavenq" path="res://Images/PLACE HOLDER DELETE BEFORE RELEASE/icon.svg" id="2_ff7db"]
[ext_resource type="Texture2D" uid="uid://dhpnikdfc31qs" path="res://Images/PLACE HOLDER DELETE BEFORE RELEASE/Untitled.svg" id="3_3uu4q"]

[node name="Scene" type="Node2D"]

[node name="Buttons" type="Node2D" parent="."]
script = ExtResource("1_wlqcl")

[node name="New Game" type="Button" parent="Buttons"]
offset_left = 512.0
offset_top = 208.0
offset_right = 640.0
offset_bottom = 272.0
text = "New Game"

[node name="Settings" type="Button" parent="Buttons"]
offset_left = 512.0
offset_top = 288.0
offset_right = 640.0
offset_bottom = 352.0
text = "Settings"

[node name="Exit" type="Button" parent="Buttons"]
offset_left = 8.0
offset_top = 568.0
offset_right = 136.0
offset_bottom = 632.0
text = "GET THE FUCK 
OUT OF HERE"

[node name="Credits" type="Button" parent="Buttons"]
offset_left = 1016.0
offset_top = 568.0
offset_right = 1144.0
offset_bottom = 632.0
text = "Credits"

[node name="Game Title" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Game Title"]
position = Vector2(576, 128)
texture = ExtResource("2_ff7db")

[node name="TextEdit" type="TextEdit" parent="Game Title/Sprite2D"]
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
text = "
         GAME 
         TITLE 
         HERE"
editable = false
selecting_enabled = false
metadata/_edit_lock_ = true

[node name="BG" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="BG"]
z_index = -1
position = Vector2(576, 320)
scale = Vector2(9, 5.0625)
texture = ExtResource("3_3uu4q")
metadata/_edit_lock_ = true

[connection signal="pressed" from="Buttons/New Game" to="Buttons" method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="Buttons" method="_on_settings_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="Buttons" method="_on_exit_pressed"]
[connection signal="pressed" from="Buttons/Credits" to="Buttons" method="_on_credits_pressed"]
